fix: config-service application.yaml

--- a/config-service/src/main/resources/application.yaml
+++ b/config-service/src/main/resources/application.yaml
@@ -8,5 +8,7 @@ spring:
           default-label: main
           uri: https://github.com/PodssilDev/Microservicios_Tingeso2
           search-paths: config-data
+          password: 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
+          username: PodssilDev
   application:
     name: config-service
