--- a/empleado-service/src/main/resources/bootstrap.yml
+++ b/empleado-service/src/main/resources/bootstrap.yml
@@ -3,7 +3,7 @@ spring:
     restart:
       aditional-paths: src/main/java
   application:
-    name: emppleado-service
+    name: empleado-service
   cloud:
     config:
       enabled: true
