--- a/config-data/gateway-service.yaml
+++ b/config-data/gateway-service.yaml
@@ -32,4 +32,8 @@ spring:
           uri: lb://justificativo-service
           predicates:
             - Path=/justificativo/**
+        - id: autorizacion-service
+          uri: lb://autorizacion-service
+          predicates:
+            - Path=/autorizacion/**
         
