feat: Marcas-Reloj-Service

--- a/config-data/gateway-service.yaml
+++ b/config-data/gateway-service.yaml
@@ -36,4 +36,7 @@ spring:
           uri: lb://autorizacion-service
           predicates:
             - Path=/autorizacion/**
-        
+        - id: marcas-reloj-service
+          uri: lb://marcas-reloj-service
+          predicates:
+            - Path=/marcas-reloj/**
