feat: HU4 - Avance Backcend 2

--- a/config-data/gateway-service.yaml
+++ b/config-data/gateway-service.yaml
@@ -40,3 +40,7 @@ spring:
           uri: lb://marcas-reloj-service
           predicates:
             - Path=/marcas-reloj/**
+        - id: oficinaRRHH-service
+          uri: lb://oficinaRRHH-service
+          predicates:
+            - Path=/oficinaRRHH/**
