--- a/justificativo-service/src/main/resources/bootstrap.yml
+++ b/justificativo-service/src/main/resources/bootstrap.yml
@@ -20,7 +20,9 @@ spring:
       ddl-auto: create
 keycloak:
   realm: tingeso-webapp
-  auth-server-url: http://localhost:8085
+  authServerUrl: http://host.docker.internal:8085/
   resource: springboot-keycloak
   publicClient: true
-  bearer-only: true
+  sslRequired: external
+  bearerOnly: true
+  useResourceRoleMappings: true
