--- a/oficinaRRHH-service/src/main/resources/bootstrap.yml
+++ b/oficinaRRHH-service/src/main/resources/bootstrap.yml
@@ -18,3 +18,8 @@ spring:
     hibernate:
       dialect: MySQL8Dialect
       ddl-auto: create
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
