--- a/config-service/src/main/resources/application.yaml
+++ b/config-service/src/main/resources/application.yaml
@@ -6,7 +6,7 @@ spring:
       server:
         git:
           default-label: main
-          uri: https://github.com/PodssilDev/tingeso-config.git
+          uri: https://github.com/PodssilDev/Tingeso_PEP2
           search-paths: config-data
   application:
     name: config-service
